fixed missing background in modal

--- a/app/components-react/highlighter/StreamView.m.less
+++ b/app/components-react/highlighter/StreamView.m.less
@@ -27,7 +27,7 @@
   gap: 16px;
 }
 
-.stream-view-root {
+.import-modal-root {
   position: relative;
 
   :global(.ant-modal-wrap),
@@ -52,6 +52,16 @@
     background-color: transparent;
     box-shadow: none;
   }
+}
+.stream-view-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.stream-card-modal-root {
+  position: relative;
 }
 
 // Upload
